Fix typo. Add CI build option.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,5 @@ Issues = "https://github.com/dgdguk/convolutionalfixedsum/issues"
 requires = ["setuptools >= 77.0.3"]
 build-backend = "setuptools.build_meta"
 
+[tool.cibuildwheel]
+build-frontend = "build"
