--- a/.github/workflows/publish-to-pypi-and-test.yml
+++ b/.github/workflows/publish-to-pypi-and-test.yml
@@ -14,8 +14,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
-      - uses: actions/setup-python@v5
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.23.3
@@ -26,7 +28,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
-          path: dist.
+          path: dist/
 
   publish-to-pypi:
     name: >-
@@ -46,7 +48,7 @@ jobs:
           with:
             name: python-package-distributions
             path: dist/
-        - name: Publish distribution 📦 to PyPI
+        - name: Publish distribution to PyPI
           uses: pypa/gh-action-pypi-publish@release/v1
 
   publish-to-testpypi:
@@ -68,7 +70,7 @@ jobs:
         with:
           name: python-package-distributions
           path: dist/
-      - name: Publish distribution 📦 to TestPyPI
+      - name: Publish distribution to TestPyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://test.pypi.org/legacy/
